[package]
name = "alixt"
version = "0.6.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A command line http API testing utility with TOML configuration"
repository = "https://github.com/D-H0f/alixt"


[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.7"
