[package]
name = "alixt"
version = "0.8.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/D-H0f/alixt"
description = "A command line http API testing utility with TOML configuration"
keywords = ["cli", "http", "testing", "automation", "api"]
categories = ["command-line-utilities", "development-tools::testing", "web-programming::http-client"]


[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
toml = "0.9.10"
alixt-table = "0.2.0"
